--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,10 +3,10 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=App Title
+appTitle=Hello World
 
 #YDES: Application description
-appDescription=An SAP Fiori application.
+appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
 #XTIT: Main view title
 title=App Title
 
