Margin and Paddings

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,5 +10,8 @@ appDescription=A simple walkthrough app that explains the most important concept
 #XTIT: Main view title
 title=App Title
 
+#HelloPanel
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
+homePageTitle=Walkthrough
+HelloPanelTitle=Hello World
